--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/server.js"
+    "start": "nodemon ./bin/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "http": "0.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
