--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.3",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "mongoose": "^5.0.16"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
