--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "guid": "0.0.12",
     "http": "0.0.0",
     "mongoose": "^5.0.16"
   },
