--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.16.3",
     "guid": "0.0.12",
     "http": "0.0.0",
-    "mongoose": "^5.0.16"
+    "md5": "^2.2.1",
+    "mongoose": "^5.0.16",
+    "sendgrid": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
