--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "guid": "0.0.12",
     "http": "0.0.0",
+    "jsonwebtoken": "^7.4.0",
     "md5": "^2.2.1",
     "mongoose": "^5.0.16",
     "sendgrid": "^2.0.0"
